Build Agent Modified DocFX Site

--- a/Beta2/SDS/Filter_Expressions.html
+++ b/Beta2/SDS/Filter_Expressions.html
@@ -111,7 +111,7 @@
 <thead>
 <tr>
 <th>Operator</th>
-<th>Comment</th>
+<th>Description</th>
 </tr>
 </thead>
 <tbody>
@@ -161,8 +161,8 @@
 </tr>
 </tbody>
 </table>
-<h3 id="logical-operator-examples">Logical Operator Examples</h3>
-<p>For the following examples, assume that the SDS Type event includes a field named <code>Value</code> of type <strong>double</strong>:</p>
+<h3 id="logical-operator-examples">Logical operator examples</h3>
+<p>For the following examples, you can assume that the SDS Type event includes a field named <code>Value</code> of type <strong>double</strong>:</p>
 <ul>
 <li><code>Value eq 1.0</code></li>
 <li><code>Value ne 15.6</code></li>
@@ -180,7 +180,7 @@
 <thead>
 <tr>
 <th>Function</th>
-<th>Comment</th>
+<th>Description</th>
 </tr>
 </thead>
 <tbody>
@@ -218,8 +218,8 @@
 </tr>
 </tbody>
 </table>
-<h3 id="math-function-examples">Math Function Examples</h3>
-<p>For the following examples, assume that the SDS Type event includes a field named <code>Value</code> of type <strong>double</strong>:</p>
+<h3 id="math-function-examples">Math function examples</h3>
+<p>For the following examples, you can assume that the SDS Type event includes a field named <code>Value</code> of type <strong>double</strong>:</p>
 <ul>
 <li><code>Value eq (6.0 add 3.0)</code></li>
 <li><code>Value eq (6.0 sub 3.0)</code></li>
@@ -235,8 +235,8 @@
 <table>
 <thead>
 <tr>
-<th>function</th>
-<th>Comment</th>
+<th>Function</th>
+<th>Description</th>
 </tr>
 </thead>
 <tbody>
@@ -287,7 +287,7 @@
 </tbody>
 </table>
 <h3 id="string-function-examples">String function examples</h3>
-<p>The following examples assume that the SDS Type event includes a field named <code>sValue</code> of type <strong>string</strong>:</p>
+<p>For the following examples, you can assume that the SDS Type event includes a field named <code>sValue</code> of type <strong>string</strong>:</p>
 <table>
 <thead>
 <tr>
@@ -348,7 +348,7 @@
 <thead>
 <tr>
 <th>Function</th>
-<th>Comment</th>
+<th>Description</th>
 </tr>
 </thead>
 <tbody>
@@ -378,8 +378,8 @@
 </tr>
 </tbody>
 </table>
-<h3 id="datetime-function-examples">DateTime Function Examples</h3>
-<p>The following examples assume that the SDS Type event includes a field named <code>TimeId</code> of type <strong>DateTime</strong>:</p>
+<h3 id="datetime-function-examples">DateTime function examples</h3>
+<p>For the following examples, you can assume that the SDS Type event includes a field named <code>TimeId</code> of type <strong>DateTime</strong>:</p>
 <ul>
 <li><code>year(TimeId) eq 2015</code></li>
 <li><code>month(TimeId) eq 11</code></li>
@@ -393,8 +393,8 @@
 <table>
 <thead>
 <tr>
-<th>function</th>
-<th>Comment</th>
+<th>Function</th>
+<th>Description</th>
 </tr>
 </thead>
 <tbody>
@@ -420,8 +420,8 @@
 </tr>
 </tbody>
 </table>
-<h3 id="timespan-function-examples">TimeSpan Function Examples</h3>
-<p>For the following examples, assume that the SDS Type event includes a field named <code>TimeSpanValue</code> of type <strong>TimeSpan</strong>:</p>
+<h3 id="timespan-function-examples">TimeSpan function examples</h3>
+<p>For the following examples, you can assume that the SDS Type event includes a field named <code>TimeSpanValue</code> of type <strong>TimeSpan</strong>:</p>
 <ul>
 <li><code>years(TimeSpanValue) eq 1</code></li>
 <li><code>days(TimeSpanValue) eq 22</code></li>
