Build Agent Modified DocFX Site

--- a/Beta2/Egress/Egress.html
+++ b/Beta2/Egress/Egress.html
@@ -260,7 +260,7 @@
     &quot;StreamPrefix&quot; : &quot;1ValidPrefix.&quot;,
     &quot;TypePrefix&quot; : &quot;AlsoValid_&quot;,
     &quot;DebugExpiration&quot; : null,
-    &quot;NamespaceId&quot; : &quot;default&quot;,
+    &quot;NamespaceId&quot; : &quot;default&quot;
 }]
 </code></pre><p><strong>Egress data to PI - streams whose Id contains &quot;Modbus&quot; or &quot;Opc&quot;, every 1 minute.</strong></p>
 <pre><code class="lang-json">[{
