Build Agent Modified DocFX Site

--- a/Beta2/Configuration/Schemas/OpcUa_Logging_schema.html
+++ b/Beta2/Configuration/Schemas/OpcUa_Logging_schema.html
@@ -96,7 +96,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="edgeloggerconfiguration-properties">EdgeLoggerConfiguration properties</h1>
+<h1 id="opcualoggerconfiguration-properties">OpcUaLoggerConfiguration Properties</h1>
 <table>
 <thead>
 <tr>
