--- a/Beta2/Configuration/Schemas/Storage_Logging_schema.html
+++ b/Beta2/Configuration/Schemas/Storage_Logging_schema.html
@@ -96,7 +96,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="edgeloggerconfiguration-properties">EdgeLoggerConfiguration Properties</h1>
+<h1 id="storageloggerconfiguration-properties">StorageLoggerConfiguration Properties</h1>
 <table>
 <thead>
 <tr>
