--- a/Beta2/Configuration/Schemas/System_Logging_schema.html
+++ b/Beta2/Configuration/Schemas/System_Logging_schema.html
@@ -79,9 +79,9 @@
 <th>Extensible</th>
 <th>Status</th>
 <th>Identifiable</th>
-<th>Custom Properties</th>
-<th>Additional Properties</th>
-<th>Defined In</th>
+<th>Custom properties</th>
+<th>Additional properties</th>
+<th>Defined in</th>
 </tr>
 </thead>
 <tbody>
