--- a/Beta2/Configuration/Schemas/OpcUa_DataSource_schema.html
+++ b/Beta2/Configuration/Schemas/OpcUa_DataSource_schema.html
@@ -69,7 +69,7 @@
       <div role="main" class="container body-content hide-when-search">
         <div class="article row grid">
           <div class="col-md-10">
-            <article class="content wrap" id="_content" data-uid="opcUa_DataSelection_Schema">
+            <article class="content wrap" id="_content" data-uid="opcUa_DataSource_Schema">
 <h1 id="sample-opc-ua-data-source-configuration">Sample Opc Ua data source configuration</h1>
 
 <pre><code class="lang-json">{
