--- a/Beta2/Configuration/Schemas/System_HealthEndpoints_schema.html
+++ b/Beta2/Configuration/Schemas/System_HealthEndpoints_schema.html
@@ -79,9 +79,9 @@
 <th>Extensible</th>
 <th>Status</th>
 <th>Identifiable</th>
-<th>Custom Properties</th>
-<th>Additional Properties</th>
-<th>Defined In</th>
+<th>Custom properties</th>
+<th>Additional properties</th>
+<th>Defined in</th>
 </tr>
 </thead>
 <tbody>
@@ -359,7 +359,7 @@
 <li>is optional</li>
 <li>type: <code>string</code></li>
 </ul>
-<h5 id="id-type-1">Id Type</h5>
+<h5 id="id-type-1">Id type</h5>
 <p><code>string</code>, nullable</p>
 <h4 id="maxbuffersizemb-1">MaxBufferSizeMB</h4>
 <p><code>MaxBufferSizeMB</code></p>
@@ -367,7 +367,7 @@
 <li>is optional</li>
 <li>type: <code>integer</code></li>
 </ul>
-<h5 id="maxbuffersizemb-type-1">MaxBufferSizeMB Type</h5>
+<h5 id="maxbuffersizemb-type-1">MaxBufferSizeMB type</h5>
 <p><code>integer</code></p>
 <h4 id="password-1">Password</h4>
 <p><code>Password</code></p>
@@ -375,7 +375,7 @@
 <li>is optional</li>
 <li>type: <code>string</code></li>
 </ul>
-<h5 id="password-type-1">Password Type</h5>
+<h5 id="password-type-1">Password type</h5>
 <p><code>string</code>, nullable</p>
 <h4 id="username-1">UserName</h4>
 <p><code>UserName</code></p>
@@ -383,7 +383,7 @@
 <li>is optional</li>
 <li>type: <code>string</code></li>
 </ul>
-<h5 id="username-type-1">UserName Type</h5>
+<h5 id="username-type-1">UserName type</h5>
 <p><code>string</code>, nullable</p>
 <h4 id="validateendpointcertificate-1">ValidateEndpointCertificate</h4>
 <p><code>ValidateEndpointCertificate</code></p>
@@ -391,7 +391,7 @@
 <li>is optional</li>
 <li>type: <code>boolean</code></li>
 </ul>
-<h5 id="validateendpointcertificate-type-1">ValidateEndpointCertificate Type</h5>
+<h5 id="validateendpointcertificate-type-1">ValidateEndpointCertificate type</h5>
 <p><code>boolean</code></p>
 </article>
           </div>
