--- a/Beta2/Configuration/EdgeSystemConfiguration.html
+++ b/Beta2/Configuration/EdgeSystemConfiguration.html
@@ -73,7 +73,39 @@
 
 <p>You use JSON files stored in a protected directory on Linux or Windows to configure Edge System. While the files are accessible to view, it is recommended that you use REST for any changes you make to the files. As part of making Edge System as secure as possible, any passwords or secrets that are configured will be stored in encrypted form (with cryptographic key material stored separately in a secure location.) If the files are edited directly, the system may not work as expected. Configuration of the system can also be accomplished using the command line if desired, but since REST is the primary means of interacting with Edge Storage functionality, REST is the recommended technique for configuring the system.</p>
 <p><strong>Note:</strong> It is possible to edit any single component or facet of the system using REST, but it is also possible to configure the system as a whole with a single REST call.</p>
-<h2 id="system-configuration">System configuration</h2>
+<h2 id="configuring-the-edge-system">Configuring the Edge System</h2>
+<p>The Edge System hosts other components. While the initial release of the Edge System includes Modbus, Opc Ua, and Storage components, they are only active if the system is configured to use them. The System itself has a relatively small configuration surface area - the list of components and the HTTP Port used for REST calls.</p>
+<h3 id="systemportjson">System_Port.json</h3>
+<p>System_Port.json specifies the port on which the System is listening for REST API calls. The same port is used for configuration and for writing data to OMF and SDS. The default configuration port is 5590. The default System_Port.json file installed is:</p>
+<pre><code class="lang-json">{
+  &quot;Port&quot;: 5590
+}
+</code></pre><p>Allowable ports are in the range of 1024-65535. Before you change the default, ensure that no other service or application on the computer running the EdgeSystem is using that port - only one application or service can use a port. The Edge System must be restarted if the port number changes through the REST API or the command line.</p>
+<h3 id="systemcomponentsjson">System_Components.json</h3>
+<p>The minimum System_Components.json file for the System is below. The Storage component is required for this initial release for the System to run. With later releases of the Edge System, the storage component may not be required.</p>
+<pre><code class="lang-json">[
+  {
+    &quot;ComponentId&quot;: &quot;Storage&quot;,
+    &quot;ComponentType&quot;: &quot;EDS.Component&quot;
+  }
+]
+</code></pre><p>The default System_Components.json for Beta 2 is given below. It includes three components - Storage, a single Modbus adapter (Modbus1), a single Opc Ua Adapter (OpcUa1), and a Storage component (EDS.Component).</p>
+<pre><code class="lang-json">[
+ {
+   &quot;ComponentId&quot;: &quot;OpcUa1&quot;,
+   &quot;ComponentType&quot;: &quot;OpcUa&quot;
+ },
+ {
+   &quot;ComponentId&quot;: &quot;Modbus1&quot;,
+   &quot;ComponentType&quot;: &quot;Modbus&quot;
+ },
+ {
+   &quot;ComponentId&quot;: &quot;Storage&quot;,
+   &quot;ComponentType&quot;: &quot;EDS.Component&quot;
+ }
+]
+</code></pre><p> Additional Modbus and Opc Ua components can be added if desired, but only a single Storage component is supported. In Beta 2 the system must be restarted if a component is added or deleted using the REST API or the command line.</p>
+<h2 id="configuring-entire-system">Configuring entire system</h2>
 <p>The following JSON file represents minimal configuration of an Edge System. There are no Modbus or Opc Ua components, and the Storage component configurations are set to the default. If a system were configured with this JSON file, any existing Modbus or Opc Ua components would be disabled and removed. No storage data would be deleted or modified, and OMF and SDS data access would not be impacted.</p>
 <pre><code class="lang-json">{
     &quot;Storage&quot;: {
