Build Agent Modified DocFX Site

--- a/Beta2/Overview/SDSQuickStart.html
+++ b/Beta2/Overview/SDSQuickStart.html
@@ -68,7 +68,7 @@
       <div role="main" class="container body-content hide-when-search">
         <div class="article row grid">
           <div class="col-md-10">
-            <article class="content wrap" id="_content" data-uid="sddQuickStart">
+            <article class="content wrap" id="_content" data-uid="sdsQuickStart">
 <h1 id="edge-storage-sds-quick-start">Edge Storage SDS Quick Start</h1>
 
 <p>This document is a quick tour of getting data into the Edge Storage component using the Sequential Data Store (SDS) REST API. This tour assumes the Edge System has been installed, and is accessible via a REST API using the default installed port (5590). This tour will use curl, a commonly available tool on both Windows and Linux, and use command line commands. The same operations can be used with any programming language or tool that supports making REST calls. In addition data retrieval steps (GET commands) can be accomplished using a browser if one is available on the device.</p>
