--- a/Beta2/Administration/Administration.html
+++ b/Beta2/Administration/Administration.html
@@ -76,7 +76,7 @@
 <p>Edge System provides a method of performing a complete reset of the product. When you perform a reset, all event data and Edge System configuration is deleted, and the product is restarted.</p>
 <p><strong>Note:</strong> All configuration and stored data will be lost as a result of performing this action.</p>
 <p>To reset the Edge System, use any REST client and make a request using one of the following:</p>
-<pre><code>Method: POST
+<pre><code class="lang-http">Method: POST
 Endpoint: http://localhost:5590/api/v1/administration/System/Reset
 Header: Content-Type application/json
 </code></pre><p>Example using cURL:</p>
@@ -85,7 +85,7 @@ Header: Content-Type application/json
 <h2 id="reset-the-edge-storage-component">Reset the Edge Storage Component</h2>
 <p>Edge System provides a method by which a user may delete and reset all event and configuration data related to the Edge Data Store component, after which the product will be restarted.</p>
 <p>To reset the Storage component, use any REST client and make a request using one of the following:</p>
-<pre><code>Method: POST
+<pre><code class="lang-http">Method: POST
 Endpoint: http://localhost:5590/api/v1/administration/Storage/Reset
 Header: Content-Type application/json
 </code></pre><p>Example using cURL:</p>
@@ -95,7 +95,7 @@ Header: Content-Type application/json
 <p>Edge System provides the ability to stop and start connectivity components. By default, when Edge System starts, all currently configured connectivity components are started and remain running until the product shuts down.</p>
 <h3 id="stop-a-connectivity-adapter">Stop a Connectivity Adapter</h3>
 <p>To stop an individual connectivity component, use any REST client and make a request using one of the following:</p>
-<pre><code>Method: POST
+<pre><code class="lang-http">Method: POST
 Endpoint: http://localhost:5590/api/v1/administration/ConnectivityId/Stop
 Header: Content-Type application/json
 </code></pre><p>Example using cURL:</p>
@@ -104,7 +104,7 @@ Header: Content-Type application/json
 <p>An HTTP status 204 message indicates success.</p>
 <h3 id="start-a-connectivity-adapter">Start a Connectivity Adapter</h3>
 <p>To start an individual connectivity component, use any REST client and make a request using the following:</p>
-<pre><code>Method: POST
+<pre><code class="lang-http">Method: POST
 Endpoint: http://localhost:5590/api/v1/administration/ConnectivityId/Start
 Header: Content-Type application/json
 </code></pre><p>Example using cURL:</p>
