Build Agent Modified DocFX Site

--- a/Beta2/Administration/ManagementTools.html
+++ b/Beta2/Administration/ManagementTools.html
@@ -71,6 +71,8 @@
             <article class="content wrap" id="_content" data-uid="managementTools">
 <h1 id="edge-system-management-tools">Edge System management tools</h1>
 
+<h2 id="command-line-configuration">Command Line Configuration</h2>
+<p>In Beta 2 it is recommended that REST be used to configure the Edge System. In the final release there will also be command line configuration tools available.</p>
 <h2 id="rest-tools">REST tools</h2>
 <p>The following tools are available to facilitate the execution of REST calls.</p>
 <h3 id="curl">cURL</h3>
