--- a/Beta2/Configuration/Schemas/ConfigurationSchemaList.html
+++ b/Beta2/Configuration/Schemas/ConfigurationSchemaList.html
@@ -71,6 +71,7 @@
             <article class="content wrap" id="_content" data-uid="configurationSchemaList">
 <h1 id="configuration-schemas">Configuration schemas</h1>
 
+<p>The Edge System is configured via a series of JSON files. The schemas for these files are provided in the installation directory and are documented below. </p>
 <h2 id="edge-system-configuration-schemas">Edge System configuration schemas</h2>
 <p>Use the following schemas to configure Edge System:</p>
 <ul>
@@ -81,13 +82,13 @@
 </ul>
 <h2 id="connectivity-adapters-configuration-schemas">Connectivity Adapters configuration schemas</h2>
 <p>Use the following schemas to configure Connectivity Adapters:</p>
-<p><strong>OpcUa</strong></p>
+<h3 id="opc-ua">OPC UA</h3>
 <ul>
 <li><a href="OpcUa_DataSource_schema.html">DataSourceConfiguration</a></li>
 <li><a href="OpcUa_DataSelection_schema.html">DataCollectionItem</a></li>
 <li><a href="OpcUa_Logging_schema.html">EdgeLoggerConfiguration</a></li>
 </ul>
-<p><strong>Modbus</strong></p>
+<h3 id="modbus">Modbus</h3>
 <ul>
 <li><a href="Modbus_DataSource_schema.html">DataSourceConfiguration</a></li>
 <li><a href="Modbus_DataSelection_schema.html">DataSelectionConfiguration</a></li>
