--- a/Beta2/Docker/EdgeDocker.html
+++ b/Beta2/Docker/EdgeDocker.html
@@ -72,7 +72,7 @@
 <h1 id="using-edge-system-with-docker">Using Edge System with Docker</h1>
 
 <p>Docker is a set of tools that can be used on Linux to manage application deployments. It is beyond the scope of this document to explain concepts behind Docker containers, and it is assumed that if a reader wants to use Docker they are familiar with the underlying technology and have determined it is appropriate for their planned use of the Edge System.</p>
-<p>The objective of this document is to provide examples of how to successfully create a Docker container with the Edge System, if it is decided Docker is desirable. Docker is not a requirement to use the Edge System and is regarded as an advanced user scenario.</p>
+<p>The objective of this document is to provide examples of how to successfully create a Docker container with the Edge System, if it is decided Docker is desirable. Docker is not a requirement to use the Edge System.</p>
 <h2 id="creating-a-docker-container-containing-the-edge-system">Creating a Docker container containing the Edge System</h2>
 <h3 id="arm32-processor">ARM32 Processor</h3>
 <p>Create the following Dockerfile in the directory where you wish to create and/or run the container:</p>
