--- a/Beta2/Overview/PIEgressQuickStart.html
+++ b/Beta2/Overview/PIEgressQuickStart.html
@@ -71,7 +71,7 @@
             <article class="content wrap" id="_content" data-uid="piEgressQuickStart">
 <h1 id="pi-system-pi-web-api-egress-quick-start">PI System (PI Web API) Egress Quick Start</h1>
 
-<p>This document is a quick tour of getting data stored in the Edge System into a remote PI System. This is accomplished using PI Web API which is configured for Basic authentication. </p>
+<p>This document is a quick tour of getting data stored in the Edge System into a remote PI System. This is accomplished using PI Web API which is configured for Basic authentication.</p>
 <h2 id="create-a-periodic-egress-configuration">Create a Periodic Egress Configuration</h2>
 <p>The first step is to configure Edge Storage Periodic Egress for the PI Web API endpoint and credentials:</p>
 <pre><code class="lang-json">[{
@@ -92,8 +92,8 @@
         &quot;Password&quot;: &quot;&lt;password&gt;&quot;,
         &quot;DebugExpiration&quot;: null
 }]
-</code></pre><p>Edit the JSON above to add the server name of your PI Web API server, add a username and password that can write data to PI Web API using Basic authentication. It is also recommended that each device have a unique StreamPrefix and TypePrefix. These values will be used when creating unique PI Points on the PI System. Run the following curl script to configure the Edge Storage to send data to the PI System. This configuration is set up to send all stream data to the PI System. If you wish to only send specific streams, edit the EgressFilter value. Examples of more advanced scenarios are in the Egress section of this documentation.</p>
-<p>Save the JSON with the file name PeriodicEgressEndpoints.json and run the following curl script in the same diretory where the file exists on the device where the Edge System is installed. The file and curl script can be run from any directory on the device:</p>
+</code></pre><p>Edit the JSON above to add the server name of your PI Web API server, add a username and password properties to specify a valid account that can write data via PI Web API using Basic authentication. The StreamPrefix and TypePrefix can be used to ensure uniqueness on the destination system, if required. The StreamPrefix value will be used if provided in creating unique PI Points on the PI System. Run the following curl script to configure the Edge Storage to send data to the PI System. This configuration is set up to send all stream data to the PI System. If you wish to only send specific streams, edit the EgressFilter value. Examples of more advanced scenarios are in the Egress section of this documentation.</p>
+<p>Save the JSON with the file name PeriodicEgressEndpoints.json and run the following curl script in the same directory where the file exists on the device where the Edge System is installed. The file and curl script can be run from any directory on the device:</p>
 <pre><code class="lang-bash">curl -i -d &quot;@PeriodicEgressEndpoints.json&quot; -H &quot;Content-Type: application/json&quot; -X PUT http://localhost:5590/api/v1/configuration/storage/PeriodicEgressEndpoints/
 </code></pre><p>When this command completes successfully data will start being sent to the PI System.</p>
 </article>
