--- a/Beta2/ReleaseNotes/ReleaseNotes.html
+++ b/Beta2/ReleaseNotes/ReleaseNotes.html
@@ -71,27 +71,27 @@
             <article class="content wrap" id="_content" data-uid="releaseNotes">
 <h1 id="edge-system-beta-2-release-notes">Edge System Beta 2 Release Notes</h1>
 
-<p>Edge System Beta 2 contains all the features expected to be present in the first release of the Edge System. Since this is a Beta release, some features may change slightly in the final release, but most of the engineering work will focus on bug fixes and performance improvements after this Beta.</p>
-<p>This is the second beta release of the combined Edge System - including Storage (SDS and OMF) along with Modbus and Opc Ua connectivity. Upon installation storage functions will be immediately available - Modbus and Opc Ua will require additional configuration steps. Additional steps for configuring connectivity will be available, along with other documentation at <a href="https://edge-docs.osisoft.com/">https://edge-docs.osisoft.com/</a> shortly after Beta 2 is available.</p>
+<p>Edge System Beta 2 contains all the features expected to be present in the first release of Edge System. Since this is a Beta release, some features may change slightly in the final release, but most of the engineering work will focus on bug fixes and performance improvements after this Beta.</p>
+<p>This is the second beta release of the combined Edge System - including Storage (SDS and OMF) along with Modbus and Opc Ua connectivity. Upon installation, storage functions will be immediately available - Modbus TCP and OPC UA will require additional configuration steps. Additional steps for configuring connectivity will be available, along with other documentation at <a href="https://edge-docs.osisoft.com/">https://edge-docs.osisoft.com/</a> shortly after Beta 2 is available.</p>
 <h2 id="overview">Overview</h2>
-<p>The Edge System is supported on a variety of platforms and processors. OSIsoft provides ready to use install kits for the following platforms:</p>
+<p>Edge System is supported on a variety of platforms and processors. OSIsoft provides ready to use install kits for the following platforms:</p>
 <ul>
 <li>Windows 10 x64 - EdgeSystem.msi (Intel/AMD 64 bit processors)</li>
 <li>Debian 9 or later x64/AMD64 - EdgeSystem_linux-x64.deb (Intel/AMD 64 bit processors)</li>
 <li>Debian 9 or later ARM32 - EdgeSystem_linux-arm.deb (Raspberry PI 2,3,4, BeagleBone devices, other ARM v7 and ARM v8 32 bit processors)</li>
 </ul>
-<p>In addition to ready to use install kits, OSIsoft also provides examples of how to create Docker Containers in a separate file and tar.gz files are provided with binaries for customers who wish to build their own custom installers or containers for Linux.</p>
+<p>In addition to ready to use install kits, OSIsoft also provides examples of how to create Docker Containers in a separate file. tar.gz files are provided with binaries for customers who want to build their own custom installers or containers for Linux.</p>
 <h2 id="differences-from-beta-1">Differences from Beta 1</h2>
 <ul>
-<li>The Edge System is now built using Microsoft .NET Core version 2.2.6.</li>
-<li>The default port has been changed from 5000 to 5590. It can be changed during the install process, and also through configuration after installation.  Changing the port requires a restart of the Edge System for it to take effect.</li>
-<li>When run in a Docker container the exposed port is now 5590 and not port 80 as in Beta 1.</li>
-<li>The entire Edge System (including Modbus and Opc Ua adapters) can now be configured using a single file in a single REST call.</li>
+<li>Edge System is built using Microsoft .NET Core version 2.2.6.</li>
+<li>The default port has been changed from 5000 to 5590. It can be changed during the install process, and also through configuration after installation.  Changing the port requires a restart of Edge System for it to take effect.</li>
+<li>When run in a Docker container, the exposed port is now 5590 and not port 80 as in Beta 1.</li>
+<li>Entire Edge System (including Modbus TCP and OPC UA adapters) can now be configured using a single file in a single REST call.</li>
 <li>Secret storage on Linux has been moved from the /.OSIsoft to a directory under /usr/share/OSIsoft.</li>
 <li>PeriodicEgressTargets has been renamed to PeriodicEgressEndpoints.</li>
 <li>StreamStorage configuration has been renamed Runtime configuration and includes a new setting for ingress debugging.</li>
 <li>Both ingress and egress debugging options have been changed from a boolean value to a DateTime. After the configured DateTime for debugging, it will automatically be disabled.</li>
-<li>OMF Health messages are now supported for all Edge Components (Storage, Modbus, Opc Ua)</li>
+<li>OMF Health messages are now supported for all Edge Components (Storage, Modbus TCP, OPC UA)</li>
 <li>A new diagnostics namespace has been added where streams are populated by components in the system with information useful for monitoring performance and reliabiliy. It can be egressed to a remote PI Web API server or OSIsoft Cloud Services to assist with remote montitoring of an Edge System.</li>
 <li>Support for PI Connector Relay has been removed - the only authentication models supported for egress are now Basic Authentication for PI Web Api, and ClientId and ClientSecret for OSIsoft Cloud Services.</li>
 <li>Schemas for a number of configuration files have changed to make them more consistent across different components. Please refer to the updated documentation for the new schemas.</li>
@@ -99,27 +99,27 @@
 <li>The TypePrefix property  is now properly applied to types when they are egressed to PI Web Api or OSIsoft Cloud Services.</li>
 <li>The Event Filtering capabilities of PeriodicEgressEndpoints has been removed from the product.</li>
 <li>Significant improvements have been made in the reliability of egressing data to PI Web Api or OSIsoft Cloud Services.</li>
-<li>The Edge System now supports a Rest method for performing a full reset of the product, which will include removal of all existing configuration and stored event data.</li>
-<li>A new Rest method has been added for purging all stored event data and configuration related to the Storage component.</li>
-<li>Individual connectivity components may be started and stopped via newly added Rest methods.</li>
-<li>Startup of the Edge System has been made more resilient so that the product will start and may be configured even in circumstances where it&#39;s improperly configured.</li>
-<li>Library libicu63 is now added as a dependency on Linux so the Edge System may properly install on Raspberry PI 4 devices.</li>
+<li>Edge System now supports a REST method for performing a full reset of the product, which will include removal of all existing configuration and stored event data.</li>
+<li>A new REST method has been added for purging all stored event data and configuration related to the Storage component.</li>
+<li>Individual connectivity components may be started and stopped through newly added REST methods.</li>
+<li>Startup of Edge System has been made more resilient so that the product will start and may be configured even in circumstances where it&#39;s improperly configured.</li>
+<li>Library libicu63 is now added as a dependency on Linux so Edge System may properly install on Raspberry PI 4 devices.</li>
 <li>The optional Type and Stream prefix strings for PeriodicEgressTargets were relaxed. Previously they had to be alphanumeric with an optional underscore. They can now be any string, including special characters, but there are a list of restriced characters that are not allowed. See documentation for list of restricted characters.</li>
 </ul>
-<h2 id="installing-edge-system-on-a-device-using-an-install-kit">Installing Edge System on a Device using an install kit</h2>
+<h2 id="install-edge-system-on-a-device-using-an-install-kit">Install Edge System on a Device using an install kit</h2>
 <p>To use any of the installers, first copy the appropriate file to the file system of the device.</p>
 <h3 id="windows-windows-10-x64">Windows (Windows 10 x64)</h3>
 <p>Double click the EdgeSystem.msi file in Windows Explorer or execute the file from a command prompt. You will be prompted for install location and default port, and when the install finishes the EdgeSystem will be installed and running on either the default port 5590 or the port you specified during the install.</p>
 <h3 id="debian-9-or-later-linux-ubuntu--raspberry-pi-beaglebone-other-debian-based-linux-distros">Debian 9 or later Linux (Ubuntu  Raspberry PI, BeagleBone, other Debian based Linux distros)</h3>
 <p>Open a terminal window and type:</p>
 <pre><code class="lang-bash">sudo apt install ./EdgeSystem_linux_&lt;either x64 or arm depending upon processor&gt;.deb
-</code></pre><p>A check will be done for prerequisites. If the Linux OS is up to date the install will succeed. If the install fails run the following commands from the terminal window and try the install again:</p>
+</code></pre><p>A check will be done for prerequisites. If the Linux OS is up to date, the install will succeed. If the install fails, run the following commands from the terminal window and try the install again:</p>
 <pre><code class="lang-bash">sudo apt update
 sudo apt uggrade
-</code></pre><p>After the check for prerequisites succeeds, a prompt will appear asking if you want to change the default port (5590). If you wish to change the port type in another port in the acceptable range for the OS you are using, or if 5590 is acceptable, press enter.</p>
-<p>The install will complete and the EdgeSystem will be running on your device. You can verify the EdgeSystem is correctly installed by running the following script from the terminal window (depending upon the processor, memory, and storage it may take the system a few seconds to start up):</p>
+</code></pre><p>After the check for prerequisites succeeds, a prompt will display asking if you want to change the default port (5590). If you want to change the port type in another port in the acceptable range for the OS you are using, or if 5590 is acceptable, press enter.</p>
+<p>The install will complete and EdgeSystem will be running on your device. You can verify that EdgeSystem is correctly installed by running the following script from the terminal window. <strong>Note:</strong> Depending on the processor, memory, and storage, it may take the system a few seconds to start up</p>
 <pre><code class="lang-bash">curl http://localhost:5590/api/v1/configuration
-</code></pre><p>If the installation was successful you will get back a JSON copy of the default system configuration:</p>
+</code></pre><p>If the installation was successful, you will get back a JSON copy of the default system configuration:</p>
 <pre><code class="lang-json">{
     &quot;Storage&quot;: {
         &quot;Runtime&quot;: {
@@ -182,11 +182,11 @@ sudo apt uggrade
         &quot;DataSelection&quot;: []
     }
 }
-</code></pre><p>If you get back an error, wait a few seconds and try it again. On a device with limited processor, memory and slow storage it may take some time before the Edge System is fully initialized and running for the first time.</p>
+</code></pre><p>If you get back an error, wait a few seconds and try it again. On a device with limited processor, memory, and slow storage, it may take some time before Edge System is fully initialized and running for the first time.</p>
 <h2 id="known-issues">Known Issues</h2>
-<p>When configuration is retrieved from a default installation of Edge System <a href="http://localhost:5590/api/vi/configuration">http://localhost:5590/api/vi/configuration</a> the output JSON cannot be successfully written back to configure the system. The workaround is to remove the OEMConfiguration section of the JSON schema and any non-configured Modbus or Opc Ua components before updating the configuration, otherwise 400 errors will occur when the <a href="http://localhost:5590/api/vi/configuration">http://localhost:5590/api/vi/configuration</a> URI is called with a PUT command. This will be fixed before the inital release of the Edge System.</p>
+<p>When configuration is retrieved from a default installation of Edge System <a href="http://localhost:5590/api/vi/configuration">http://localhost:5590/api/vi/configuration</a>, the output JSON cannot be successfully written back to configure the system. The workaround is to remove the OEMConfiguration section of the JSON schema and any non-configured Modbus or Opc Ua components before updating the configuration. Otherwise, 400 errors will occur when the <a href="http://localhost:5590/api/vi/configuration">http://localhost:5590/api/vi/configuration</a> URI is called with a PUT command. This will be fixed before the inital release of Edge System.</p>
 <p>Final component health status updates may be lost when the product is shutdown.  This will be fixed before the inital release of the Edge System.</p>
-<p>The Edge System reset and Storage component reset methods do not properly restart the server when invoked.  The server must be manually restarted in order to complete the reset of the System or Storage component.  This will be fixed before the inital release of the Edge System.</p>
+<p>The Edge System reset and Storage component reset methods do not properly restart the server when invoked. You must manually restart the server in order to complete the reset of the System or Storage component. This will be fixed before the inital release of the Edge System.</p>
 </article>
           </div>
           
