Build Agent Modified DocFX Site

--- a/Beta2/Administration/LoggingConfiguration.html
+++ b/Beta2/Administration/LoggingConfiguration.html
@@ -68,7 +68,7 @@
       <div role="main" class="container body-content hide-when-search">
         <div class="article row grid">
           <div class="col-md-10">
-            <article class="content wrap" id="_content" data-uid="edgeSystemLogging">
+            <article class="content wrap" id="_content" data-uid="loggingConfiguration">
 <h1 id="edge-system-logging">Edge System Logging</h1>
 
 <p>Logging is useful for diagnosing deployment or production issues, so it can set dynamically without restarting the system.</p>
