Build Agent Modified DocFX Site

--- a/V1/CommandLine/Configure Edge Data Store components.html
+++ b/V1/CommandLine/Configure Edge Data Store components.html
@@ -105,7 +105,7 @@
 <li><p>Type the following command, replacing <code>&lt;componentId&gt;</code> and <code>&lt;facetName&gt;</code> with the values that you want.</p>
 <pre><code class="lang-bash">edgecmd Configuration &lt;componentId&gt; &lt;facetName&gt;
 </code></pre></li>
-<li><p>Add key=value pairs to specify the values to changed and press Enter.</p>
+<li><p>Add key=value pairs to specify the values to change and press Enter.</p>
 <p> <strong>Example</strong>: Configuration of the data source facet of a Modbus adapter</p>
 <pre><code class="lang-bash">edgecmd Configuration Modbus1 DataSource IpAddress=117.23.45.110 port=502 ConnectTimeout=15000 StreamIdPrefix=&quot;DataSource1&quot;
 </code></pre></li>
