Build Agent Modified DocFX Site

--- a/V1/Diagnostics/Diagnostics.html
+++ b/V1/Diagnostics/Diagnostics.html
@@ -152,7 +152,7 @@ This diagnostic stream contains system-level information related to the host pla
 <tr>
 <td>double</td>
 <td>PeakPagedMemorySize (uom=MB) </td>
-<td>Maximum amount of memory in the virtual memory paging file, in bytes, used by the host process. </td>
+<td>Maximum amount of memory in the virtual memory paging file, in bytes, used by the host process. <br><br><strong>Note:</strong> On Linux platiforms, this value is always reported as 0.</td>
 </tr>
 <tr>
 <td>double</td>
