Build Agent Modified DocFX Site

--- a/V1/toc.html
+++ b/V1/toc.html
@@ -297,7 +297,14 @@
                               </ul>
                           </li>
                           <li>
+                              <span class="expand-stub"></span>
                               <a href="SDS/indexes_1-0.html" name="" title="Indexes">Indexes</a>
+                              
+                              <ul class="nav level3">
+                                    <li>
+                                        <a href="SDS/Indexes/Indexes_examples_1-0.html" name="" title="Index examples">Index examples</a>
+                                    </li>
+                              </ul>
                           </li>
                           <li>
                               <span class="expand-stub"></span>
